--- a/photo.html
+++ b/photo.html
@@ -54,13 +54,12 @@
 		</div></a>
 	</div>
 	<div class="content">
-		<div class="picture-container"><img class="picture" src="_MG_0448.png"></div>
-		<div class="picture-container"><img class="picture" src="_MG_0339small.png"></div>
-		<div class="picture-container"><img class="picture" src="_MG_9914.png"></div>
-		<div class="picture-container"><img class="picture" src="_MG_8849.png"></div>
-		<div class="picture-container"><img class="picture" src="_MG_7909.png"></div>
-		<div class="picture-container"><img class="picture" src="_MG_8805.png"></div>
-		
+		<div class="picture-container"><img class="picture" src="https://imgur.com/PjZ5cX9.png"></div>
+		<div class="picture-container"><img class="picture" src="https://imgur.com/HunQKjz.png"></div>
+		<div class="picture-container"><img class="picture" src="https://imgur.com/XxacbPx.png"></div>
+		<div class="picture-container"><img class="picture" src="https://imgur.com/QmUAF8n.png"></div>
+		<div class="picture-container"><img class="picture" src="https://imgur.com/nRAgTAl.png"></div>
+		<div class="picture-container"><img class="picture" src="https://imgur.com/VzJVSYE.png"></div>
 	</div>
 <!--	<div class="putstuffhere"></div>-->
 	<script>
