--- a/index.html
+++ b/index.html
@@ -1,15 +1,16 @@
 <!doctype html>
 <html>
+
 <head>
-<meta charset="UTF-8">
-<title>Andrew Thompson</title>
+	<meta charset="UTF-8">
+	<title>Andrew Thompson</title>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-<!--	<link href="main.css" rel="stylesheet" type="text/css">-->
-<!--	<link href="mobile.css" rel="stylesheet" type="text/css">-->
+	<!--	<link href="main.css" rel="stylesheet" type="text/css">-->
+	<!--	<link href="mobile.css" rel="stylesheet" type="text/css">-->
 	<script>
-		if($(window).width() > $(window).height()) {
+		if ($(window).width() > $(window).height()) {
 			document.write('<link href="main.css" rel="stylesheet" type="text/css">');
-		} else { 
+		} else {
 			document.write('<link href="mobile.css" rel="stylesheet" type="text/css">');
 		}
 	</script>
@@ -18,16 +19,16 @@
 <body>
 	<div class="fullscreen" id="splash">
 		<div class="splash-title">
-			<p>Andrew</p>
+			<p>Andrewwwwwww</p>
 			<p>Thompson</p>
 		</div>
-		
+
 		<div class="center-block">
 			<p>Photographer</p>
 			<p>Copywriter</p>
 			<p>Designer</p>
 		</div>
-		
+
 		<div class="subheader">Wanna know more?</div>
 		<div class="downarrow">
 			<a href="#bio"><img src="down-arrow.png" alt="down arrow" class="downarrow"></a>
@@ -37,34 +38,47 @@
 		<div class="bio-header">Hi, I'm Andrew</div>
 		<div class="bio-body">
 			<p>I'm a freshman at Johnson & Wales University in Providence, Rhode Island studying Advertising and Media Communications. As far as advertising goes, I'm a creative that dabbles a bit in everything, trying to find my way in the world.</p>
-			
+
 		</div>
 		<div class="sidebar">
 			<a href="#portfolio" class="sidebar-hitbox">
 				<div class="sidebar-text">Portfolio</div>
 				<img src="down-arrow.png" alt="down arrow" class="bio-downarrow">
-<!--				<div class="sidebar-hitbox"></div>-->
+				<!--				<div class="sidebar-hitbox"></div>-->
 			</a>
 		</div>
-		
+
 	</div>
-	<div class="fullscreen" id="portfolio">		
-		<a href="photo.html"><div class="top slice"><p>Photography</p></div></a>
-		<a href="design.html"><div class="left slice"><p>Design</p></div></a>
-		<a href="copy.html"><div class="right slice"><p>Copywriting</p></div></a>
+	<div class="fullscreen" id="portfolio">
+		<a href="photo.html">
+			<div class="top slice">
+				<p>Photography</p>
+			</div>
+		</a>
+		<a href="design.html">
+			<div class="left slice">
+				<p>Design</p>
+			</div>
+		</a>
+		<a href="copy.html">
+			<div class="right slice">
+				<p>Copywriting</p>
+			</div>
+		</a>
 		<div class="new-divider"></div>
 	</div>
 	<div class="fullscreen" id="contact">
 		<div class="contact-header">Get in touch</div>
 		<div class="contact-body">
-<!--			<p>Feel free to shoot me an email</p>-->
+			<!--			<p>Feel free to shoot me an email</p>-->
 			<p><a href="mailto:athompson06@wildcats.jwu.edu" alt="Email">Email</a></p>
 			<p><a href="https://www.linkedin.com/in/andrewlthompson" alt="linkedin">Linkedin</a></p>
 			<p><a href="https://www.behance.net/andrew-l-thompson" alt="Behance">Behance</a></p>
-		
-			
+
+
 		</div>
 	</div>
-	
+
 </body>
+
 </html>
