--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <body>
 	<div class="fullscreen" id="splash">
 		<div class="splash-title">
-			<p>Andrewwwwwww</p>
+			<p>This is bullshit</p>
 			<p>Thompson</p>
 		</div>
 
