--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 	<div class="fullscreen" id="splash">
 		<div class="splash-title">
 			<p>This is bullshit</p>
-			<p>Thompson</p>
+			<p style="font-size=75px">Thompson</p>
 		</div>
 
 		<div class="center-block">
