--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<!--	<link href="main.css" rel="stylesheet" type="text/css">-->
 	<!--	<link href="mobile.css" rel="stylesheet" type="text/css">-->
 	<script>
-		var isMobile = $(window).width() > $(window).height();
+		var isDesktop = $(window).width() > $(window).height();
 
 		if (isMobile) {
 			document.write('<link href="main.css" rel="stylesheet" type="text/css">');
