--- a/copy.html
+++ b/copy.html
@@ -61,6 +61,7 @@
 	</div>
 
 	<script>
+		console.log(isMobile);
 		if (!isMobile) {
 			document.write('<a href="index.html#portfolio"><div class="bottom-bar"><img src="back-arrow.png" alt="back-arrow" class="mobile-back-arrow"><p>Portfolio</p></div></a>');
 		}
