--- a/copy.html
+++ b/copy.html
@@ -18,7 +18,7 @@
 
 		$(document).ready(function () {
 			isDesktop = $(window).width() > $(window).height();
-			if (isMobile) { //desktop
+			if (isDesktop) { //desktop
 				$('.sidebar-hitbox').on('mouseover', function (event) {
 					$('.sidebar-overlay').fadeIn(200);
 				});
@@ -61,8 +61,8 @@
 	</div>
 
 	<script>
-		console.log(isMobile);
-		if (!isMobile) {
+		console.log(isDesktop);
+		if (!isDesktop) {
 			document.write('<a href="index.html#portfolio"><div class="bottom-bar"><img src="back-arrow.png" alt="back-arrow" class="mobile-back-arrow"><p>Portfolio</p></div></a>');
 		}
 	</script>
