--- a/copy.html
+++ b/copy.html
@@ -18,6 +18,7 @@
 	</script>-->
 	<script>
 		$(document).ready(function () {
+			console.log("it's go time pussy");
 			isDesktop = $(window).width() > $(window).height();
 			if (isDesktop) { //desktop
 				$('.sidebar-hitbox').on('mouseover', function (event) {
