--- a/photo.html
+++ b/photo.html
@@ -1,36 +1,39 @@
 <!doctype html>
 <html>
+
 <head>
 	<meta charset="UTF-8">
 	<title>Photography</title>
-<!--	<link href="portfolio.css" rel="stylesheet" type="text/css">-->
-<!--	<link href="portfolio-mobile.css" rel="stylesheet" type="text/css">-->
+	<!--	<link href="portfolio.css" rel="stylesheet" type="text/css">-->
+	<!--	<link href="portfolio-mobile.css" rel="stylesheet" type="text/css">-->
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 	<script>
-		if($(window).width() > $(window).height()) { //desktop
+		if ($(window).width() > $(window).height()) { //desktop
 			document.write('<link href="portfolio.css" rel="stylesheet" type="text/css">');
-		} else {  //mobile
+		} else { //mobile
 			document.write('<link href="portfolio-mobile.css" rel="stylesheet" type="text/css">');
 		}
 	</script>
 	<script>
-		$(document).ready(function(){
-			$('.sidebar-hitbox').on('mouseover', function(event){
-    			$('.sidebar-overlay').fadeIn(200);
-			});
+		$(document).ready(function () {
+			if ($(window).width() > $(window).height()) { //desktop
+				$('.sidebar-hitbox').on('mouseover', function (event) {
+					$('.sidebar-overlay').fadeIn(200);
+				});
 
-			$('.sidebar-hitbox').on('mouseout', function(event){
-				$('.sidebar-overlay').fadeOut(200);
-			});
-			
-			$('.sidebar-hitbox').click(function(){
-				console.log("si senior");
-				if($('.sidebar-overlay').is(':visible')) {
-					window.location = "index.html#portfolio"
-				}
-			})
+				$('.sidebar-hitbox').on('mouseout', function (event) {
+					$('.sidebar-overlay').fadeOut(200);
+				});
+
+				$('.sidebar-hitbox').click(function () {
+					console.log("si senior");
+					if ($('.sidebar-overlay').is(':visible')) {
+						window.location = "index.html#portfolio"
+					}
+				})
+			}
 		})
-	</script>	
+	</script>
 </head>
 
 <body>
@@ -39,8 +42,8 @@
 	<div class="sidebar">
 		<div id="photo">
 			<script>
-				if($(window).width() > $(window).height()) {
-					for(i=0; i < $(window).height(); i+=44) {
+				if ($(window).width() > $(window).height()) {
+					for (i = 0; i < $(window).height(); i += 44) {
 						$("#photo").append("<p>Photography</p>");
 					}
 				} else {
@@ -48,10 +51,12 @@
 				}
 			</script>
 		</div>
-		<a href="index.html#portfolio"><div class="sidebar-overlay">
-			<p>Photography</p>
-			<img src="back-arrow.png" alt="back arrow" class="back-arrow">
-		</div></a>
+		<a href="index.html#portfolio">
+			<div class="sidebar-overlay">
+				<p>Photography</p>
+				<img src="back-arrow.png" alt="back arrow" class="back-arrow">
+			</div>
+		</a>
 	</div>
 	<div class="content">
 		<div class="picture-container"><img class="picture" src="https://imgur.com/PjZ5cX9.png"></div>
@@ -61,13 +66,14 @@
 		<div class="picture-container"><img class="picture" src="https://imgur.com/nRAgTAl.png"></div>
 		<div class="picture-container"><img class="picture" src="https://imgur.com/VzJVSYE.png"></div>
 	</div>
-<!--	<div class="putstuffhere"></div>-->
+	<!--	<div class="putstuffhere"></div>-->
 	<script>
-		if($(window).width() < $(window).height()) {
-			document.write('<a href="index.html#portfolio"><div class="bottom-bar"><img src="back-arrow.png" alt="back-arrow" class="mobile-back-arrow"><p>Portfolio</p></div></a>');
-//			console.log("stuff was put");
+		if ($(window).width() < $(window).height()) {
+			document.write('<a href="index.html#portfolio"><div class="bottom-bar"><img src="back-arrow.png" alt="back-arrow" class="mobile-back-arrow"><p class="bottom-bar-text">Portfolio</p></div></a>');
+			//			console.log("stuff was put");
 		}
 	</script>
-	
+
 </body>
+
 </html>
