--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 		</div>
 
 		<div class="center-block">
-			<p>Photographer</p>
+			<p>Photoographer</p>
 			<p>Copywriter</p>
 			<p>Designer</p>
 		</div>
