--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
 
 		<div class="center-block">
 			<p>Photographer</p>
-			<p>Copywriter</p>
 			<p>Designer</p>
+			<p>Writer</p>
 		</div>
 
 		<div class="subheader">Wanna know more?</div>
@@ -56,19 +56,19 @@
 
 	</div>
 	<div class="fullscreen" id="portfolio">
-		<a href="photo.html">
+		<a href="photos.html">
 			<div class="top slice">
-				<p>Photography</p>
+				<p>Photos</p>
 			</div>
 		</a>
-		<a href="design.html">
+		<a href="projects.html">
 			<div class="left slice">
-				<p>Design</p>
+				<p>Projects</p>
 			</div>
 		</a>
-		<a href="copy.html">
+		<a href="pieces.html">
 			<div class="right slice">
-				<p>Copywriting</p>
+				<p>Pieces</p>
 			</div>
 		</a>
 		<div class="new-divider"></div>
