--- a/projects.html
+++ b/projects.html
@@ -3,7 +3,7 @@
 
 <head>
 	<meta charset="UTF-8">
-	<title>Design</title>
+	<title>Projects</title>
 	<!--	<link href="portfolio.css" rel="stylesheet" type="text/css">-->
 	<!--	<link href="portfolio-mobile.css" rel="stylesheet" type="text/css">-->
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
@@ -60,7 +60,7 @@
 
 		<a href="index.html#portfolio">
 			<div class="sidebar-overlay">
-				<p>Design</p>
+				<p>Projects</p>
 				<img src="back-arrow.png" alt="back arrow" class="back-arrow">
 			</div>
 		</a>
