--- a/pieces.html
+++ b/pieces.html
@@ -3,7 +3,7 @@
 
 <head>
 	<meta charset="UTF-8">
-	<title>Copywriting</title>
+	<title>Pieces</title>
 	<!--	<link href="portfolio-mobile.css" rel="stylesheet" type="text/css">-->
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 	<script>
@@ -65,13 +65,13 @@
 		<div id="copy"></div>
 		<a href="index.html#portfolio">
 			<div class="sidebar-overlay">
-				<p>Copywriting</p>
+				<p>Pieces</p>
 				<img src="back-arrow.png" alt="back arrow" class="back-arrow">
 			</div>
 		</a>
 	</div>
 	<div class="content">
-		<div class="content-title">Error 404: writing not found</div>
+		<div class="content-title">Pieces: small bits of branding and spec</div>
 
 	</div>
 
