--- a/photos.html
+++ b/photos.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Photography</title>
-		<link href="portfolio.css" rel="stylesheet" type="text/css">
+	<link href="portfolio.css" rel="stylesheet" type="text/css">
 	<!--	<link href="portfolio-mobile.css" rel="stylesheet" type="text/css">-->
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 	<script>
@@ -59,43 +59,98 @@
 		</a>
 	</div>
 	<div class="content">
-		<div class="picture-container" id="pic1"><img class="picture" src="https://imgur.com/PjZ5cX9.png"></div>
-		<div class="picture-container" id="pic2"><img class="picture" src="https://imgur.com/HunQKjz.png"></div>
-		<div class="picture-container" id="pic3"><img class="picture" src="https://imgur.com/XxacbPx.png"></div>
-		<div class="picture-container" id="pic4"><img class="picture" src="https://imgur.com/QmUAF8n.png"></div>
-		<div class="picture-container" id="pic5"><img class="picture" src="https://imgur.com/nRAgTAl.png"></div>
-		<div class="picture-container" id="pic6"><img class="picture" src="https://imgur.com/VzJVSYE.png"></div>
+		<div class="picture-container" id="pic1"><img class="picture" src="https://imgur.com/PjZ5cX9.png">
+			<div class="picture-caption">f/2.8 | 1/100s | ISO/100</div>
+			<div class="picture-caption">Mansfield, Connecticut</div>
+		</div>
+		<div class="picture-container" id="pic2"><img class="picture" src="https://imgur.com/HunQKjz.png">
+			<div class="picture-caption">f/2.8 | 1/80s | ISO/400</div>
+			<div class="picture-caption">The Vatican</div>
+		</div>
+		<div class="picture-container" id="pic3"><img class="picture" src="https://imgur.com/XxacbPx.png">
+			<div class="picture-caption">f/2.8 | 1/1000s | ISO/100</div>
+			<div class="picture-caption">The Vatican</div>
+		</div>
+		<div class="picture-container" id="pic4"><img class="picture" src="https://imgur.com/QmUAF8n.png">
+			<div class="picture-caption">f/2.8 | 1/800s | ISO/100</div>
+			<div class="picture-caption">Providence, Rhode Island</div>
+		</div>
+		<div class="picture-container" id="pic5"><img class="picture" src="https://imgur.com/nRAgTAl.png">
+			<div class="picture-caption">f/1.8 | 1/1600s | ISO/100</div>
+			<div class="picture-caption">Mansfield, Connecticut</div>
+		</div>
+		<div class="picture-container" id="pic6"><img class="picture" src="https://imgur.com/VzJVSYE.png">
+			<div class="picture-caption">f/1.8 | 1/125s | ISO/200</div>
+			<div class="picture-caption">Providence, Rhode Island</div>
+		</div>
+		<div class="picture-caption" id="bottom-caption" style="display: inline-block; width: 90%;">Click each pic for info</div>
 	</div>
-	
+
 	<script>
-		$("#pic1").onClick(function(){
-			alert(("#pic1").hasClass("picture-highlighted"));
-			if(!("#pic1").hasClass("picture-highlighted")) {
-				$("#pic1").addClass("picture-highlighted");
-			} else {
-				$("#pic1").removeClass("picture-highlighted");
+		function hideEverythingElse(target) {
+			var first = ["#pic1", "#pic2", "#pic3", "#pic4", "#pic5", "#pic6"];
+			var indexValue = first.indexOf(target);
+			first.splice(indexValue, 1);
+			console.log("remove" + first.length);
+			for (i = 0; i < first.length; i++) {
+				$(first[i]).css("display", "none");
 			}
+			first.push(target);
+
+			$(target + " > .picture-caption").css("display", "inline-block");
+		}
+
+		function unhideEverythingElse(target) {
+			var first = ["#pic1", "#pic2", "#pic3", "#pic4", "#pic5", "#pic6"];
+			var indexValue = first.indexOf(target);
+			first.splice(indexValue, 1);
+			console.log("add" + first.length);
+			for (i = 0; i < first.length; i++) {
+				$(first[i]).css("display", "inline-block");
+			}
+			first.push(target);
+
+			$(target + " > .picture-caption").css("display", "none");
+		}
+
+		function clickerThingy(target) {
+			//			console.log(target + " status: " + $(target).hasClass("picture-highlighted"));
+			if (!$(target).hasClass("picture-highlighted")) {
+				$(target).addClass("picture-highlighted");
+				hideEverythingElse(target);
+			} else {
+				$(target).removeClass("picture-highlighted");
+				unhideEverythingElse(target);
+			}
+		}
+
+
+
+		$("#pic1").on("click", function () {
+			clickerThingy("#pic1");
 		});
-		$("#pic1").on("click", function(){
-			
+
+		$("#pic2").on("click", function () {
+			clickerThingy("#pic2");
 		});
-		$("#pic2").on("click", function(){
-			$("#pic1").css("width", "60vw");
+
+		$("#pic3").on("click", function () {
+			clickerThingy("#pic3");
 		});
-		$("#pic3").on("click", function(){
-			$("#pic1").css("width", "60vw");
+
+		$("#pic4").on("click", function () {
+			clickerThingy("#pic4");
 		});
-		$("#pic4").on("click", function(){
-			$("#pic1").css("width", "60vw");
+
+		$("#pic5").on("click", function () {
+			clickerThingy("#pic5");
 		});
-		$("#pic5").on("click", function(){
-			$("#pic1").css("width", "60vw");
-		});
-		$("#pic6").on("click", function(){
-			$("#pic1").css("width", "60vw");
+
+		$("#pic6").on("click", function () {
+			clickerThingy("#pic6");
 		});
 	</script>
-	
+
 	<!--	<div class="putstuffhere"></div>-->
 	<script>
 		if ($(window).width() < $(window).height()) {
