--- a/index.html
+++ b/index.html
@@ -76,11 +76,10 @@
 	<div class="fullscreen" id="contact">
 		<div class="contact-header">Get in touch</div>
 		<div class="contact-body">
-			<!--			<p>Feel free to shoot me an email</p>-->
 			<p><a href="mailto:athompson06@wildcats.jwu.edu" alt="Email">Email</a></p>
-			<p><a href="https://www.linkedin.com/in/andrewlthompson" alt="linkedin">Linkedin</a></p>
+			<p><a href="https://www.linkedin.com/in/andrew-l-thompson" alt="linkedin">Linkedin</a></p>
 			<p><a href="https://www.behance.net/andrew-l-thompson" alt="Behance">Behance</a></p>
-
+			<p><a href="https://www.instagram.com/andrew_thhompson/" alt="Behance">Instagram</a></p>
 
 		</div>
 	</div>
