--- a/projects.html
+++ b/projects.html
@@ -70,7 +70,7 @@
 		<div class="title-mobile"></div>
 		<script>
 			if ($(window).width() < $(window).height()) {
-				$(".title-mobile").append("Design");
+				$(".title-mobile").append("Projects");
 			}
 		</script>
 		<div class="content-title">Sweet Emotions</div>
