--- a/pieces.html
+++ b/pieces.html
@@ -11,7 +11,7 @@
 	</script>
 	
 <!--	<link href="portfolio.css" rel="stylesheet" type="text/css">-->
-	<link href="portfolio-mobile.css" rel="stylesheet" type="text/css">
+<!--	<link href="portfolio-mobile.css" rel="stylesheet" type="text/css">-->
 	
 	<script>
 		//		console.log("it's go time pussy");
