uhhhhh can I get uhhhhhh

--- a/pieces.html
+++ b/pieces.html
@@ -10,7 +10,7 @@
 		var isDesktop = true;
 	</script>
 	
-	<link href="portfolio.css" rel="stylesheet" type="text/css">
+<!--	<link href="portfolio.css" rel="stylesheet" type="text/css">-->
 <!--	<link href="portfolio-mobile.css" rel="stylesheet" type="text/css">-->
 	
 	<script>
@@ -129,12 +129,14 @@
 		</div>
 	</div>
 
+<!--
 	<script>
 		console.log(isDesktop);
 		if (!isDesktop) {
 			document.write('<a href="index.html#portfolio"><div class="bottom-bar"><img src="back-arrow.png" alt="back-arrow" class="mobile-back-arrow"><p class="bottom-bar-text">Portfolio</p></div></a>');
 		}
 	</script>
+-->
 	
 	<script>
 		$(document).ready(function(){
