--- a/projects.html
+++ b/projects.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Projects</title>
-		<link href="portfolio.css" rel="stylesheet" type="text/css">
+<!--		<link href="portfolio.css" rel="stylesheet" type="text/css">-->
 <!--		<link href="portfolio-mobile.css" rel="stylesheet" type="text/css">-->
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 	<script>
