--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 	<div class="fullscreen" id="bio">
 		<div class="bio-header">Hi, I'm Andrew</div>
 		<div class="bio-body">
-			<p>I'm a freshman at Johnson & Wales University in Providence, Rhode Island studying Advertising and Marketing Communications. As far as advertising goes, I'm a creative that dabbles a bit in everything, trying to find my way in the world.</p>
+			<p>I'm a student at Johnson & Wales University in Providence, Rhode Island studying Advertising and Marketing Communications. As far as advertising goes, I'm a creative that dabbles a bit in everything, trying to find my way in the world.</p>
 			<p>As you can see, I'm not a one trick pony: I competed for 6 years in the Vex Robotics Competition from 7th grade on, and competed in DECA my Junior and Senior years. If there's one thing I've learned through all of that, it's how to learn things.</p>
 		</div>
 		<div class="sidebar">
