--- a/photos.html
+++ b/photos.html
@@ -2,6 +2,20 @@
 <html>
 
 <head>
+	<!-- Global site tag (gtag.js) - Google Analytics -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-117438573-1"></script>
+	<script>
+		window.dataLayer = window.dataLayer || [];
+
+		function gtag() {
+			dataLayer.push(arguments);
+		}
+		gtag('js', new Date());
+
+		gtag('config', 'UA-117438573-1');
+	</script>
+
+
 	<meta charset="UTF-8">
 	<title>Photography</title>
 	<!--	<link href="portfolio.css" rel="stylesheet" type="text/css">-->
