--- a/projects.html
+++ b/projects.html
@@ -2,6 +2,7 @@
 <html>
 
 <head>
+	<link href="portfolio.css" rel="stylesheet" type="text/css">
 	<!-- Global site tag (gtag.js) - Google Analytics -->
 	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-117438573-1"></script>
 	<script>
@@ -85,6 +86,59 @@
 			$(".title-mobile").append("Projects");
 		}
 	</script>
+	
+	<div class="content">
+		<div class="content-title">Move Out + Donate</div>
+		
+		<div class="txt">
+			<p>Move Out + Donate is a yearly campaign at Johnson & Wales University focused on encouraging recycling during spring move out. My team pitched our campaign to a panel of judges, ultimately winning and executing our vision.</p>
+			<p>Our tagline, "Don't Chuck It, Fill The Bucket" built off of the idea of driving recycling through nostalgia instead of fear, combining copy that triggers sentimental feelings for their soon-to-be ex-furniture with minimalistic graphics in striking colors. Different posters were targeted towards both On- and Off-Campus residents, with copy and graphics to match their use cases.</p>
+			<p>My role: Art direction</p>
+			<p>Team members: Lindsay Saiia & Desiree Severance</p>
+		</div>
+		
+		<div class="img" style="top: 22.5%;">
+			<img class="content-image" src="images/moveout.png">
+
+			<a href="https://www.behance.net/gallery/65409211/Move-Out-Donate">
+				<div class="behance-link behance-link-left">
+					<img src="behance logo.png" class="behance-logo behance-logo-left">
+					<div class="behance-text-container">
+						<div class="behance-text">View on</div>
+						<div class="behance-text-pink">Behance</div>
+					</div>
+				</div>
+			</a>
+		</div>
+		
+	</div>
+	
+	<div class="content">
+		<div class="content-title">Center for Academic Support</div>
+		
+		<div class="txt">
+			<p>As a group project for a PR class, I was tasked with redesigning the frankly clean slate of the Center for Academic Support at Johnson & Wales. The center, which has had little-to-no promotional materials in the past few years, is under a new director, and was seeking options on how to drive engagement.</p>
+			<p>Our theme centered around the idea of extending the entire learning environment at the university. By making the center's tutors more than just in-person Khan Academies, we fostered the idea of students taking a "minor in learning" through the center.</p>
+			<p>The main promotional packet that we created was an "admissions packet" for the center to be sent to new students, giving the future freshmen a fresh prespective on the center</p>
+			<p>My role: Art direction</p>
+			<p>Team members: Lindsay Saiia & Desiree Severance</p>
+		</div>
+		
+		<div class="img" style="top: 20%;">
+			<img class="content-image" src="images/cas.png">
+
+			<a href="https://www.behance.net/gallery/65410155/CAS">
+				<div class="behance-link behance-link-left">
+					<img src="behance logo.png" class="behance-logo behance-logo-left">
+					<div class="behance-text-container">
+						<div class="behance-text">View on</div>
+						<div class="behance-text-pink">Behance</div>
+					</div>
+				</div>
+			</a>
+		</div>
+		
+	</div>
 
 	<div class="content" id="first">
 		<div class="content-title">Sweet Emotions</div>
@@ -148,7 +202,7 @@
 		</div>
 
 		<div class="img">
-			<img class="content-image stupid-thing" src="https://mir-s3-cdn-cf.behance.net/project_modules/max_1200/4320f958678147.5a04daad518ae.png">
+			<img class="content-image" src="https://mir-s3-cdn-cf.behance.net/project_modules/max_1200/4320f958678147.5a04daad518ae.png">
 			<img class="content-image" src="https://mir-s3-cdn-cf.behance.net/project_modules/disp/6f2ec458678147.5a04daac71438.png" style="top: 0;">
 
 			<a href="https://www.behance.net/gallery/58678147/Twizzlers">
