grid fix for photos

--- a/photos.html
+++ b/photos.html
@@ -18,7 +18,7 @@
 
 	<meta charset="UTF-8">
 	<title>Photography</title>
-	<!--	<link href="portfolio.css" rel="stylesheet" type="text/css">-->
+<!--		<link href="portfolio.css" rel="stylesheet" type="text/css">-->
 	<!--	<link href="portfolio-mobile.css" rel="stylesheet" type="text/css">-->
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 	<script>
@@ -72,32 +72,32 @@
 			</div>
 		</a>
 	</div>
-	<div class="content">
-		<div class="picture-container" id="pic1"><img class="picture" src="https://imgur.com/PjZ5cX9.png">
+	<div class="photo-page">
+		<div class="picture-container" id="pic1" style="grid-area: top-left;"><img class="picture" src="https://imgur.com/PjZ5cX9.png">
 			<div class="picture-caption">f/2.8 | 1/100s | ISO/100</div>
 			<div class="picture-caption">Mansfield, Connecticut</div>
 		</div>
-		<div class="picture-container" id="pic2"><img class="picture" src="https://imgur.com/HunQKjz.png">
+		<div class="picture-container" id="pic2" style="grid-area: top-right;"><img class="picture" src="https://imgur.com/HunQKjz.png">
 			<div class="picture-caption">f/2.8 | 1/80s | ISO/400</div>
 			<div class="picture-caption">The Vatican</div>
 		</div>
-		<div class="picture-container" id="pic3"><img class="picture" src="https://imgur.com/XxacbPx.png">
+		<div class="picture-container" id="pic3" style="grid-area: left;"><img class="picture" src="https://imgur.com/XxacbPx.png">
 			<div class="picture-caption">f/2.8 | 1/1000s | ISO/100</div>
 			<div class="picture-caption">The Vatican</div>
 		</div>
-		<div class="picture-container" id="pic4"><img class="picture" src="https://imgur.com/QmUAF8n.png">
+		<div class="picture-container" id="pic4" style="grid-area: right;"><img class="picture" src="https://imgur.com/QmUAF8n.png">
 			<div class="picture-caption">f/2.8 | 1/800s | ISO/100</div>
 			<div class="picture-caption">Providence, Rhode Island</div>
 		</div>
-		<div class="picture-container" id="pic5"><img class="picture" src="https://imgur.com/nRAgTAl.png">
+		<div class="picture-container" id="pic5" style="grid-area: bottom-left;"><img class="picture" src="https://imgur.com/nRAgTAl.png">
 			<div class="picture-caption">f/1.8 | 1/1600s | ISO/100</div>
 			<div class="picture-caption">Mansfield, Connecticut</div>
 		</div>
-		<div class="picture-container" id="pic6"><img class="picture" src="https://imgur.com/VzJVSYE.png">
+		<div class="picture-container" id="pic6" style="grid-area: bottom-right;"><img class="picture" src="https://imgur.com/VzJVSYE.png">
 			<div class="picture-caption">f/1.8 | 1/125s | ISO/200</div>
 			<div class="picture-caption">Providence, Rhode Island</div>
 		</div>
-		<div class="picture-caption" id="bottom-caption" style="display: inline-block; width: 90%;">Click each pic for info</div>
+		<div class="picture-caption" id="bottom-caption" style="display: inline-block; width: 90%; grid-column-start: footer-left; grid-column-end: footer-right;">Click each pic for info</div>
 	</div>
 
 	<script>
