--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 		<div class="bio-header">Hi, I'm Andrew</div>
 		<div class="bio-body">
 			<p>I'm a student at Johnson & Wales University in Providence, Rhode Island studying Advertising and Marketing Communications. As far as advertising goes, I'm a creative that dabbles a bit in everything, trying to find my way in the world.</p>
-			<p>As you can see, I'm not a one trick pony: I competed for 6 years in the Vex Robotics Competition from 7th grade on, and competed in DECA my Junior and Senior years. If there's one thing I've learned through all of that, it's how to learn things.</p>
+			<p>I currently work at Pangea.app, a Providence-based startup building a marketplace for college students to freelance both within their institutions and with the general public. I am also the co-events chair for JWU's AD Club, and head desiginer on the award-winning AD Team.</p>
 		</div>
 		<div class="sidebar">
 			<a href="#portfolio" class="sidebar-hitbox">
